--- a/RapApp/Storyboard/Notes.storyboard
+++ b/RapApp/Storyboard/Notes.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qH6-s3-Ia7">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="awl-VW-yaa">
-                                <rect key="frame" x="0.0" y="20" width="365" height="647"/>
+                                <rect key="frame" x="0.0" y="60" width="365" height="607"/>
                                 <color key="backgroundColor" red="0.10196078431372549" green="0.10196078431372549" blue="0.11372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="separatorColor" red="0.74509803921568629" green="0.74509803921568629" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
@@ -48,6 +48,7 @@
                                         <color key="backgroundColor" red="0.10196078431372549" green="0.10196078431372549" blue="0.11372549019607843" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <outlet property="rapNameLabel" destination="rte-t5-oXS" id="1qd-Al-f0n"/>
+                                            <segue destination="2ag-vR-94Z" kind="unwind" identifier="displayNote" unwindAction="unwindWithSegueToHome:" id="9yX-wb-bfa"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -55,22 +56,26 @@
                                     <outlet property="dataSource" destination="qH6-s3-Ia7" id="kXK-z5-3rW"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aIA-BL-twv">
+                                <rect key="frame" x="303" y="9" width="56" height="52"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="2ag-vR-94Z" kind="unwind" identifier="addNote" unwindAction="unwindWithSegueToHome:" id="CHT-eD-pnQ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.10196078431372549" green="0.10196078431372549" blue="0.11372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="awl-VW-yaa" firstAttribute="trailing" secondItem="j7C-2i-Qll" secondAttribute="trailing" constant="-10" id="09W-P5-mg8"/>
                             <constraint firstItem="awl-VW-yaa" firstAttribute="leading" secondItem="j7C-2i-Qll" secondAttribute="leading" id="KA0-OM-Ctd"/>
-                            <constraint firstItem="awl-VW-yaa" firstAttribute="top" secondItem="j7C-2i-Qll" secondAttribute="top" id="T2j-Fl-aa2"/>
+                            <constraint firstItem="awl-VW-yaa" firstAttribute="top" secondItem="j7C-2i-Qll" secondAttribute="top" constant="40" id="T2j-Fl-aa2"/>
                             <constraint firstItem="awl-VW-yaa" firstAttribute="bottom" secondItem="j7C-2i-Qll" secondAttribute="bottom" id="tbE-CG-byV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="j7C-2i-Qll"/>
                     </view>
                     <navigationItem key="navigationItem" id="vGD-n5-5Hc">
-                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="RNn-bO-7ST">
-                            <connections>
-                                <segue destination="2ag-vR-94Z" kind="unwind" unwindAction="unwindWithSegueToHome:" id="8sm-PT-gKJ"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="RNn-bO-7ST"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="acw-9z-l98"/>
                     </navigationItem>
                     <connections>
