--- a/RapApp/Storyboard/Base.lproj/Home.storyboard
+++ b/RapApp/Storyboard/Base.lproj/Home.storyboard
@@ -9,11 +9,6 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Origram.otf">
-            <string>Origram</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -23,17 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Random Word" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aL4-r9-fJY">
-                                <rect key="frame" x="84.333333333333314" y="60" width="246" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="JmF-Z6-uVB"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Origram" family="Origram" pointSize="40"/>
-                                <color key="textColor" red="0.76470588235294112" green="0.027450980392156862" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DOh-iM-9sw">
-                                <rect key="frame" x="107.33333333333331" y="491" width="200" height="50"/>
+                                <rect key="frame" x="107" y="491" width="200" height="50"/>
                                 <color key="backgroundColor" red="0.30588235294117649" green="0.30588235294117649" blue="0.31372549019607843" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="PhE-DZ-bJc"/>
@@ -198,6 +184,15 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Random Word" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aL4-r9-fJY">
+                                <rect key="frame" x="67.666666666666686" y="60" width="279" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="JmF-Z6-uVB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="40"/>
+                                <color key="textColor" red="0.76470588235294112" green="0.027450980392156862" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I1o-By-lXj">
                                 <rect key="frame" x="35" y="190" width="344" height="256"/>
                                 <subviews>
@@ -217,6 +212,7 @@
                                 <rect key="frame" x="35" y="190" width="344" height="256"/>
                                 <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" red="0.71764705882352942" green="0.72156862745098038" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x7P-iz-qHg">
@@ -310,6 +306,7 @@
                         <outlet property="rhymeTwo" destination="HNX-eP-uGd" id="VPB-9a-n2f"/>
                         <outlet property="scrubberBar" destination="rsO-rO-d47" id="Sa8-aa-XRn"/>
                         <outlet property="stackViewConstraint" destination="beh-6I-2pK" id="O7D-Sl-d9w"/>
+                        <outlet property="textViewConstraint" destination="QWG-ut-Zw5" id="aKn-bQ-EA8"/>
                         <outlet property="viewConstraint" destination="7Mw-0b-5PV" id="1kk-fw-Goc"/>
                         <segue destination="8Fi-M2-uaT" kind="show" identifier="notesList" id="8NL-Or-G90"/>
                     </connections>
